character editor features

--- a/characters/templates/profile.html
+++ b/characters/templates/profile.html
@@ -11,5 +11,6 @@
         {{ form.as_p }}
         <button type="submit">Save Changes</button>
     </form>
+    <a href="{% url 'character_list' %}">Back to Character List</a>
 </body>
 </html>
