added bosses and styles

--- a/characters/templates/characters.html
+++ b/characters/templates/characters.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'characters/characters.css' %}">
 <html>
 <head>
     <title>Elden Ring Character Tracker</title>
