--- a/characters/static/characters/profile.css
+++ b/characters/static/characters/profile.css
@@ -1,84 +1,85 @@
-/* Body Styles */
 body {
   font-family: Arial, sans-serif;
-  margin: 10px; /* Adjust the margin as needed */
+  line-height: 1.6;
+  margin: 20px;
 }
 
-/* Heading Styles */
 h1 {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-/* Form Styles */
-form {
-  border: 1px solid #ccc;
-  padding: 20px;
-  border-radius: 5px;
-}
-
-form label,
-form input,
-form button {
-  display: block;
+  font-size: 32px;
   margin-bottom: 10px;
 }
 
-form label {
-  font-weight: bold;
-}
-
-form input[type="submit"] {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-/* Completed Bosses Styles */
 h2 {
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+h3 {
   font-size: 20px;
-  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
-.character-edit-container {
+p {
+  font-size: 16px;
+  margin: 0;
+}
+
+a {
+  display: block;
+  margin-bottom: 20px;
+  text-decoration: none;
+  color: #007BFF;
+  font-size: 16px;
+}
+
+form {
+  margin-top: 20px;
   display: flex;
+  gap: 20px;
 }
 
-.stats-container {
+.form-container {
   flex: 1;
-  margin-right: 20px;
+}
+
+.form-container label {
+  display: inline-block;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .bosses-container {
   flex: 1;
 }
 
-.bosses-container > div {
-  margin-bottom: 20px;
-}
-
-h3 {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: 5px;
-}
-
-/* Back to Character List Link Styles */
-a {
+.bosses-container label {
   display: block;
-  margin-top: 20px;
-  color: #007BFF;
-  text-decoration: none;
+  margin-bottom: 10px;
 }
 
-a:hover {
-  text-decoration: underline;
+.bosses-container .location-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+input[type="submit"] {
+  margin-top: 20px;
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
 }
