--- a/characters/templates/register.html
+++ b/characters/templates/register.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'characters/login_register.css' %}">
 <html>
     <head>
         <title>Register</title>
