--- a/characters/templates/characters.html
+++ b/characters/templates/characters.html
@@ -4,13 +4,15 @@
 <link rel="stylesheet" href="{% static 'characters/characters.css' %}">
 <html>
 <head>
-    <title>Elden Ring Character Tracker</title>
+    <title>ELDEN RING Character Tracker</title>
 </head>
 <body>
-    <h1>Elden Ring Character Tracker</h1>
-    {% if user.is_authenticated %}
+    <h1>ELDEN RING Character Tracker</h1>
+    <div class="container">
+      {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
-    {% endif %}
+      {% endif %}
+    </div>  
     <h2>Create a New Character</h2>
     <form method="post">
         {% csrf_token %}
